// Copyright 2026 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.analysis.bq.legacy;

import "go.chromium.org/luci/analysis/proto/bq/legacy/ants_common.proto";

option go_package = "go.chromium.org/luci/analysis/proto/bq/legacy;bqpb";

// WorkUnitProperties replicates the WorkUnitProperties in AnTS codebase.
message WorkUnitProperties {
  // Aconfig flags that were overridden at the work unit level.
  AconfigFlagOverrides aconfig_flag_overrides = 1;

  // The AnTS work unit ID corresponding to this work unit for data matching.
  // May be elided if this ResultDB work unit does not correspond 1:1 to an
  // AnTS work unit. This field will be removed in future.
  string ants_work_unit_id = 2;
}

// TestResultProperties replicates the TestResultProperties in AnTS codebase.
message TestResultProperties {
  // Aconfig flags that were overridden at the test result level. Aconfig flags
  // should be overwritten at the module level.
  AconfigFlagOverrides aconfig_flag_overrides = 1;

  // Required. Specify the legacy AnTS test ID corresponding to this test
  // result for data matching. This field will be removed in future.
  AntsTestIdentifier ants_test_id = 2;
}

// A copy of AnTS TestIdentifier proto.
message AntsTestIdentifier {
  // Name of the module this test belongs to.
  string module = 1;
  // Parameters for the test module.
  repeated StringPair module_parameters = 2;
  // The name for a group of tests that are logically grouped together.
  // Typically in the format of <package name>.<class name>.
  string test_class = 3;
  // The name of the test that is the smallest test execution unit.
  string method = 4;
}